# haystack-scavio

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: example.py
src/haystack_integrations/components/websearch/scavio/: __init__.py  scavio_websearch.py
tests/: __init__.py  test_scavio_websearch.py
