# SPDX-FileCopyrightText: 2026-present Scavio <scavio.dev@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "scavio-haystack"
dynamic = ["version"]
description = "Haystack integration for Scavio Web Search"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["Haystack", "Scavio", "Web Search", "AI Search"]
authors = [{ name = "Scavio", email = "scavio.dev@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["haystack-ai>=2.24.1", "scavio>=0.2.1"]

[project.urls]
Documentation = "https://github.com/scavio-ai/haystack-scavio#readme"
Issues = "https://github.com/scavio-ai/haystack-scavio/issues"
Source = "https://github.com/scavio-ai/haystack-scavio"

[tool.hatch.build.targets.wheel]
packages = ["src/haystack_integrations"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>.*)"

[tool.hatch.version.raw-options]
git_describe_command = 'git describe --tags --match="v[0-9]*"'

[tool.hatch.envs.default]
installer = "uv"
dependencies = ["ruff"]

[tool.hatch.envs.default.scripts]
fmt = "ruff check --fix {args}; ruff format {args}"
fmt-check = "ruff check {args} && ruff format --check {args}"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-rerunfailures",
    "mypy",
    "pip",
]

[tool.hatch.envs.test.scripts]
unit = 'pytest -m "not integration" {args:tests}'
integration = 'pytest -m "integration" {args:tests}'
all = 'pytest {args:tests}'
cov = 'pytest --cov=haystack_integrations {args:tests}'
types = "mypy -p haystack_integrations.components.websearch.scavio {args}"

[tool.mypy]
install_types = true
non_interactive = true
check_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["scavio.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C",
    "D102",
    "D103",
    "D205",
    "D209",
    "D213",
    "D417",
    "D419",
    "DTZ",
    "E",
    "EM",
    "F",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "B027",
    "B008",
    "S105",
    "S106",
    "S107",
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "ANN401",
]

[tool.ruff.lint.isort]
known-first-party = ["haystack_integrations"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252", "D", "ANN"]
"examples/**/*" = ["D", "T201", "ANN"]

[tool.coverage.run]
source = ["haystack_integrations"]
branch = true
relative_files = true
parallel = false

[tool.coverage.report]
omit = ["*/tests/*", "*/__init__.py"]
show_missing = true
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
  "integration: integration tests",
]
log_cli = true
asyncio_default_fixture_loop_scope = "function"
